examples/errors/self_not_first/main.hd
struct Point {
    x: int,

    fn bad(a: int, self: Self): int {
        return self.x + a;
    }
}

fn main(): int {
    let p = Point { x: 1 };
    return p.bad(2);
}
